# native-repro-sharp

./: .eslintrc.json  .gitignore  README.md  babel.config.js  forge.config.js  package.json  tsconfig.json  webpack.externals.js  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
_scripts/: env-check.ts
app/main/: index.ts
app/renderer/: VideoFrameExtractor.ts  index.html  index.tsx  preload.ts
app/renderer/components/: App.tsx
app/types/: global.d.ts  video-module.d.ts
native-addons/video-module/: .gitattributes  CMakeLists.txt  README.md  index.js  package.json
native-addons/video-module/FFmpeg/macos/include/libavcodec/: avcodec.h
native-addons/video-module/FFmpeg/macos/lib/: libavdevice.58.dylib  libavfilter.dylib  libavformat.58.dylib  libavutil.56.dylib  libswresample.3.dylib  libswscale.5.7.100.dylib
native-addons/video-module/FFmpeg/macos/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
native-addons/video-module/FFmpeg/win/include/libavutil/: ffversion.h
native-addons/video-module/FFmpeg/win/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
native-addons/video-module/scripts/: build-ffmpeg-macos.sh  ffmpeg-commands.txt  macos-deps.sh  macos-env.sh  macos-mangle-libs.sh  macos-shared-mem-default.sh  macos-shared-mem-large.sh  macos-shared-mem-pages.sh  macos-show-shared-mem-settings.sh  postinstall.js  windows-env.bat
native-addons/video-module/src/: common.hpp  disable_warnings_begin.hpp  disable_warnings_end.hpp
native-addons/video-module/src/ffmpeg/: AVFrameData.cpp  AVFrameData.hpp  CapturePrint.cpp  CapturePrint.hpp  OutputContext.hpp  StreamContext.cpp  StreamContext.hpp  VideoMode.cpp  VideoMode.hpp  ffmpeg.cpp  ffmpeg.hpp  ffmpeg_include.hpp
native-addons/video-module/src/node/: DummyStream.cpp  DummyStream.hpp  FFmpegStream.cpp  FFmpegStream.hpp  Frame.cpp  Frame.hpp  PerfLoggerWrapper.cpp  PerfLoggerWrapper.hpp  RemoteStream.cpp  RemoteStream.hpp  Stream.cpp  Stream.hpp  Utils.cpp  Utils.hpp  Video.cpp  Video.hpp  VideoMode.cpp  VideoMode.hpp  napi_include.hpp
native-addons/video-module/src/utils/: PerfLogger.cpp  PerfLogger.hpp  SharedMemory.cpp  SharedMemory.hpp  SharedMemoryMac.cpp  SharedMemoryMac.hpp  SharedMemoryWin.cpp  SharedMemoryWin.hpp
